--- a/OthelloGame/Othello Web/Pages/OthelloGames/Edit.cshtml
+++ b/OthelloGame/Othello Web/Pages/OthelloGames/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>OthelloGame</h4>
+<h4>Othello Game</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,9 +45,9 @@
                 <span asp-validation-for="OthelloGame.Player2Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OthelloGame.OthelloOptionId" class="control-label"></label>
-                <select asp-for="OthelloGame.OthelloOptionId" class="form-control" asp-items="ViewBag.OthelloOptionId"></select>
-                <span asp-validation-for="OthelloGame.OthelloOptionId" class="text-danger"></span>
+                <label asp-for="OthelloOption.Name" class="control-label"></label>
+                <select asp-for="OthelloOption.Name" class="form-control" asp-items="ViewBag.OthelloGameOption"></select>
+                <span asp-validation-for="OthelloOption.Name" class="text-danger" asp-items="ViewBag.OthelloGameOption"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
