--- a/OthelloGame/Othello Web/Pages/OthelloOptions/Create.cshtml
+++ b/OthelloGame/Othello Web/Pages/OthelloOptions/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Create</h1>
 
-<h4>OthelloOption</h4>
+<h4>Othello Option</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,7 +29,7 @@
                 <span asp-validation-for="OthelloOption.Height" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OthelloOption.CurrentPlayer" class="control-label"></label>
+                <label asp-for="OthelloOption.CurrentPlayer" class="control-label">Current Player (Write either "Black" or "White")</label>
                 <input asp-for="OthelloOption.CurrentPlayer" class="form-control" />
                 <span asp-validation-for="OthelloOption.CurrentPlayer" class="text-danger"></span>
             </div>
