--- a/OthelloGame/Othello Web/wwwroot/css/site.css
+++ b/OthelloGame/Othello Web/wwwroot/css/site.css
@@ -34,7 +34,7 @@ html {
 .three {
     grid-column: 3;
     grid-row: 2/5;
-    margin-left: auto;
+    margin-left: 15%;
 }
 
 .four {
@@ -65,5 +65,14 @@ img {
 .game-table-cell {
     width: 75px;
     height: 75px;
+}
+
+.valid-piece {
+
+}
+
+img {
+    height: 100%;
+    width: 100%;
 }
 
