--- a/OthelloGame/Othello Web/Pages/Index.cshtml
+++ b/OthelloGame/Othello Web/Pages/Index.cshtml
@@ -5,7 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="https://i.ibb.co/WyJQmrP/ilikecsharp.png" alt="ilikecsharp" />
 </div>
 
