--- a/OthelloGame/Othello Web/Pages/OthelloOptions/Index.cshtml
+++ b/OthelloGame/Othello Web/Pages/OthelloOptions/Index.cshtml
@@ -2,10 +2,10 @@
 @model Othello_Web.Pages_OthelloOptions.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Options";
 }
 
-<h1>Index</h1>
+<h1>Options</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -14,16 +14,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.OthelloOption[0].Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OthelloOption[0].Width)
+                Board Width
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OthelloOption[0].Height)
+                Board Height
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OthelloOption[0].CurrentPlayer)
+                Starts
             </th>
             <th></th>
         </tr>
