--- a/OthelloGame/Othello Web/Pages/_ViewImports.cshtml
+++ b/OthelloGame/Othello Web/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Othello_Web
-@using Othello_Web.Data
+@using Domain
 @namespace Othello_Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
